--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,15 @@
 name = "omnirepo"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Stefan Vatov"]
+license = "MIT"
+license-file = "LICENSE"
+description = "A command-line tool for managing multiple Git repositories."
+repository = "https://github.com/stefan-vatov/omnirepo"
+readme = "README.md"
+keywords =["repository", "cli", "terminal"]
+exclude = ["target", "Cargo.lock"]
+categories = ["command-line-utilities"]
 
 [[bin]]
 name = "omnirepo"
