fix: project_dir path

--- a/.github/workflows/pr-lint-test.yml
+++ b/.github/workflows/pr-lint-test.yml
@@ -13,4 +13,4 @@ jobs:
   lint_test:
     uses: stefan-vatov/gh-workflows/.github/workflows/rust-lint-test.yml
     with:
-      project_dir: <relative path>
+      project_dir: "."
