fix: project_dir path

--- a/.github/workflows/pr-lint-test.yml
+++ b/.github/workflows/pr-lint-test.yml
@@ -11,6 +11,6 @@ on:
 
 jobs:
   lint_test:
-    uses: stefan-vatov/gh-workflows/.github/workflows/rust-lint-test.yml
+    uses: stefan-vatov/gh-workflows/.github/workflows/rust-lint-test.yml@main
     with:
-      project_dir: "/"
+      project_dir: "."
