--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ rayon = "1.7.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_yaml = "0.9.21"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
+fern = "0.6.2"
+log = "0.4.17"
