--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ serde_yaml = "0.9.21"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 fern = "0.6.2"
 log = "0.4.17"
+prettytable-rs = "0.10.0"
