--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 fern = "0.6.2"
 log = "0.4.17"
 prettytable-rs = "0.10.0"
+once_cell = "1.17.2"
