fix: release tag

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -75,14 +75,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Install GitHub CLI
+      run: |
+        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
+        sudo apt-add-repository https://cli.github.com/packages
+        sudo apt update
+        sudo apt install gh
+    - name: Get latest tag
+      id: latest_tag
+      run: echo "::set-output name=tag::$(gh release list --limit 1 | cut -f1)"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ github.ref }}
-        release_name: Release v${{ github.ref }}
+        tag_name: ${{ steps.latest_tag.outputs.tag }}
+        release_name: Release ${{ steps.latest_tag.outputs.tag }}
         draft: false
         prerelease: false
 
